--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "sass": "^1.93.2"
   },
   "devDependencies": {
